fixing column width alignment wrapping issue

--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -106,7 +106,7 @@ h3.b {
 
 pre {
     float: left;
-    width: 49%;
+    width: 48.5%;
     padding-top: 20px;
 }
 
